Update and rename 2021-11-29-懿丕log.md to 2021-11-29-懿丕.md

--- a/_posts/2021-11-29-懿丕.md
+++ b/_posts/2021-11-29-懿丕.md
@@ -1,6 +1,6 @@
 --- 
 layout: post
-title: 懿丕log
+title: 懿丕
 date: 2021-11-29
 Author: noc
 categories: 
@@ -8,7 +8,7 @@ tags: [晋书, 懿丕, 司马懿, 曹丕, 曹叡]
 comments: true
 ---
 
-##### 晋书
+##### 《晋书》卷一 宣帝纪
 
 >魏国既建，迁太子中庶子。每与大谋，辄有奇策，为太子所信重，**与陈群、吴质、朱铄号曰四友**。
 
@@ -18,11 +18,11 @@ comments: true
 
 >（青龙）四年，获白鹿，献之。天子曰“昔周公旦辅成王，有素雉之贡。今君受陕西之任，有白鹿之献，**岂非忠诚协符，千载同契，俾乂邦家，以永厥休邪**”
 
-*此条与懿丕无关，就是曹叡太会内涵人了XD*
+此条与懿丕无关，就是曹叡太会内涵人了XD
 
 >初，帝至襄平，梦天子枕其膝，曰 **“视吾面”** 俯视有异于常，心恶之。先是，诏帝便道镇关中。及次白屋，有诏召帝，三日之间，诏书五至。手诏曰“间侧息望到，到便直排閤入，视吾面”帝大遽，乃乘追锋车昼夜兼行，自白屋四百馀里，一宿而至。引入嘉福殿卧内，升御床。帝流涕问疾，天子执帝手，目齐王曰 **“以后事相托。死乃复可忍，吾忍死待君，得相见，无所复恨矣”** 与大将军曹爽并受遗诏辅少主。
 
-*sos……*
+sos……好扭曲好多样的嗑法
 
 >先是，预作终制，于**首阳山**为土藏，不坟不树。作顾命三篇，敛以时服，不设明器，后终者不得合葬。一如遗命。
 
